# autonomous-embedded-car

./: .gitignore  README.md
src/: CMakeLists.txt  README.md
src/accelerometer/: CMakeLists.txt  accelerometer.c  magnetometer.c  magnetometer.h  magnetometer_another.c  magnetometer_another.h  mpu9250_module.c  test.c  test_socket.c
src/dashboard/: CMakeLists.txt  cgi.h  dashboard.c  htmldata.c  lwipopts.h  makefsdata.py  ssi.h
src/dashboard/html_files/: index.shtml
src/ir_sensor/: CMakeLists.txt
src/ir_sensor/barcode_scanner/: CMakeLists.txt  barcode_scanner.c  barcode_scanner.h
src/ir_sensor/line_following/: CMakeLists.txt  line_following.c  line_following.h
src/main/: CMakeLists.txt  main.c  main.h
src/main_station_1/: CMakeLists.txt  main_station_1.c  main_station_1.h
src/main_station_2/: CMakeLists.txt  main_station_2.c  main_station_2.h
src/main_station_3/: CMakeLists.txt  accel_with_client_socket.c  lwipopts_examples_common.h  server_socket.c
src/main_ultrasonic_sensor/: CMakeLists.txt  main_ultrasonic_sensor.c  ultrasonic_sensor.c  ultrasonic_sensor.h
src/main_wheel_encoder/: CMakeLists.txt  main_wheel_encoder.c  wheel_encoder.c  wheel_encoder.h
src/motor/: CMakeLists.txt  motor.c  motor.h
src/receiver/: CMakeLists.txt  receiver.c
src/ultrasonic_sensor/: CMakeLists.txt  ultrasonic_sensor.c
src/ultrasonic_sensor/archive/: main_ultrasonic_sensor.c
src/wheel_encoder/: CMakeLists.txt  wheel_encoder.c
src/wifi/: CMakeLists.txt
src/wifi/accel_with_client_socket/: CMakeLists.txt  accel_with_client_socket.c
src/wifi/barcode_client_socket/: CMakeLists.txt  barcode_client_socket.c  barcode_client_socket.h
src/wifi/barcode_scanner_with_client_socket/: CMakeLists.txt  barcode_scanner_with_client_socket.c  lwipopts.h
src/wifi/client_server_socket/: CMakeLists.txt  client_server_socket.c  client_server_socket.h
src/wifi/server_socket/: CMakeLists.txt  server_socket.c  server_socket.h
